Implement SimpleCorsFilter with HIGHEST_PRECEDENCE for explicit CORS header injection